# agentscope-ai--CoPaw

./: acceptance.md  goal.md  progress.md  pyproject.toml  todo.md
src/copaw/: __init__.py  config.py  settings.py  workspace.py
src/copaw/cli/: __init__.py  init_cmd.py  main.py  providers_cmd.py
src/copaw/local_models/: __init__.py  download.py  llamacpp.py  manager.py  model_manager.py
src/copaw/providers/: __init__.py  anthropic_compat.py  base.py  manager.py  ollama.py  openai_compat.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_anthropic_provider.py  test_cli_main.py  test_config.py  test_download_progress.py  test_init_cmd.py  test_llamacpp.py  test_local_model_facade.py  test_model_manager.py  test_ollama_provider.py  test_openai_provider.py  test_provider_base.py  test_provider_manager.py  test_providers_cmd.py  test_settings.py  test_workspace.py
